--- a/index.html
+++ b/index.html
@@ -82,9 +82,15 @@
       ><h1>
         Địa Lý
       </h1></a
-    >    
+    >   
+   <a
+      href="https://us02web.zoom.us/j/2783316670?pwd=TFBMS1ZtNnhOcHQzdDV5UG1oOTNQUT09"
+      ><h1>
+        Lịch Sử
+      </h1></a
+    > 
     <h6> 
-      đã cập nhật vào ngày 27-02-2021 14:02
+      đã cập nhật vào ngày 01-03-2021 7:40
     </h6>
   </body>
 </html>
