--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
     <h6> 
       đã cập nhật vào ngày 01-03-2021 7:40
     </h6>
+    <h6>
+      Trang Web Được tạo bởi
+       <a
+      href="linkzoom-lop7a.ga"
+      >
+        TMKLYugi
+     </a>
+    </h6>
   </body>
 </html>
 <style>
