--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
       Trang Web Được tạo bởi
        <a
       href="linkzoom-lop7a.ga"
+           target="_blank"
+      rel="follow, index"
       >
         TMKLYugi
      </a>
