--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <h6>
       Trang Web Được tạo bởi
        <a
-      href="http://linkzoom-lop7a.ga"
+      href="http://linkzoom-lop7a.ga/"
            target="_blank"
       rel="follow, index"
       >
