--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <h6> 
       đã cập nhật vào ngày 01-03-2021 7:40
     </h6>
+    <footer>
     <h6>
       Trang Web Được tạo bởi
        <a
@@ -103,6 +104,7 @@
         TMKLYugi
      </a>
     </h6>
+    </footer>
   </body>
 </html>
 <style>
