--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
@@ -72,39 +72,34 @@
         Âm Nhạc
       </h1></a
     >
-   <a
+    <a
       href="https://us02web.zoom.us/j/5758202712?pwd=TFVjN1UrMlZScEM4NEM3cGRORmxVZz09"
       ><h1>
         GDCD
       </h1></a
-    >    
-   <a
+    >
+    <a
       href="https://us04web.zoom.us/j/4713246659?pwd=eVlIM0lhOEl1TmhWeGE0cHpUQlIrQT09"
       ><h1>
         Địa Lý
       </h1></a
-    >   
-   <a
+    >
+    <a
       href="https://us02web.zoom.us/j/2783316670?pwd=TFBMS1ZtNnhOcHQzdDV5UG1oOTNQUT09"
       ><h1>
         Lịch Sử
       </h1></a
-    > 
-    <h6> 
+    >
+    <h6>
       đã cập nhật vào ngày 01-03-2021 7:40
     </h6>
     <footer>
-    <h6>
-      Trang Web Được tạo bởi
-       <a
-      href="http://linkzoom-lop7a.ga/"
-           target="_blank"
-      rel="follow, index"
-      >
-        TMKLYugi
-     </a>
-    </h6>
+      <h6>
+        Trang Web Được tạo bởi
+        <a href="http://linkzoom-lop7a.ga/" target="_blank" rel="follow, index">
+          TMKLYugi
+        </a>
+      </h6>
     </footer>
   </body>
 </html>
-<style>
