--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <meta 
+    name="viewport" 
+    content="width=device-width, initial-scale=1.0" 
+    />
+    <link 
+    rel="preconnect" 
+    href="https://fonts.gstatic.com" 
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
+    />    
+    <link 
+    rel="stylesheet" 
+    href="style.css" 
     />
     <title>Link học zoom lớp 7A</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1 class="h1">
