--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </h1>
         <a
            class="thoi"
-      href="http://thoikhoabieu.ga"
+      href="https://github.com/TMKLYugi/web/blob/main/d024cf8fc186e19c0a4ef22400bc13c8.jpg?raw=true"
      target="_blank"
        rel="follow, index">
       <h2>Lịch học(Thời khóa biểu)</h2>
