--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
+    <h1>Chào mừng Thảo lớp 7A</h1>
      <h1 class="h1">
       Link Học Zoom Lớp 7A
     </h1>
