--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!--
   <head>
     <meta 
     name="viewport" 
@@ -118,4 +119,6 @@
       </h6>
     </footer>
   </body>
+-->
+  <h1>Trang wen đang dừng hoạt động để fix lỗi và cập nhật </h1>
 </html>
