--- a/index.html
+++ b/index.html
@@ -120,5 +120,5 @@
     </footer>
   </body>
 -->
-  <h1>Trang wen đang dừng hoạt động để fix lỗi và cập nhật </h1>
+  <h1>Trang web đang dừng hoạt động để fix lỗi và cập nhật </h1>
 </html>
