--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <!--
   <head>
     <meta 
     name="viewport" 
@@ -68,7 +67,7 @@
       target="_blank"
       rel="follow, index"
       ><h1>
-        Sinh Học / Ngữ Văn
+       Ngữ Văn
       </h1></a
     >
     <a
@@ -107,8 +106,14 @@
         Lịch Sử
       </h1></a
     >
+    <a
+      href="https://us04web.zoom.us/j/3688524315?pwd=U1JEVW0rQ0w1MEV3VGhZUzFVeFVUUT09"
+      ><h1>
+        Sinh Học
+      </h1></a
+    >
     <h6>
-      đã cập nhật vào ngày 22-03-2021 21:22
+      đã cập nhật vào ngày 23-03-2021 02:34
     </h6>
     <footer>
       <h6>
@@ -119,6 +124,4 @@
       </h6>
     </footer>
   </body>
--->
-  <h1>Trang web đang dừng hoạt động để fix lỗi và cập nhật </h1>
-</html>
+
