--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </h1>
         <a
            class="thoi"
-      href="https://github.com/TMKLYugi/web/blob/main/d024cf8fc186e19c0a4ef22400bc13c8.jpg?raw=true"
-     target="_blank"
+      href="TKB.jpg"
        rel="follow, index">
       <h2>Lịch học(Thời khóa biểu)</h2>
     </a>
@@ -51,7 +50,7 @@
       target="_blank"
       rel="follow, index"
       ><h1>
-        Thê Dục
+        Thể Dục
       </h1></a
     >
     <a
@@ -113,13 +112,13 @@
       </h1></a
     >
     <h6>
-      đã cập nhật vào ngày 23-03-2021 02:34
+      đã cập nhật vào ngày 31-03-2021 07:00
     </h6>
     <footer>
       <h6>
         Trang Web Được tạo bởi
         <a href="http://linkzoom-lop7a.ga/" target="_blank" rel="follow, index">
-          TMKLYugi
+          TMKLYugi™
         </a>
       </h6>
     </footer>
