--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
   <head>
@@ -123,4 +124,5 @@
       </h6>
     </footer>
   </body>
-
+-->
+<h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
