--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -21,6 +21,7 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
+    <!--
      <h1 class="h1">
       Link Học Zoom Lớp 7A
     </h1>
@@ -112,8 +113,9 @@
         Sinh Học
       </h1></a
     >
+--> <h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
     <h6>
-      đã cập nhật vào ngày 31-03-2021 07:00
+      đã cập nhật vào ngày 31-03-2021 10:52
     </h6>
     <footer>
       <h6>
@@ -124,5 +126,3 @@
       </h6>
     </footer>
   </body>
--->
-<h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
