--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
       </h1></a
     >
 --> <h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
-    <h4>
+    <h4 class="chu-y">
       đã cập nhật vào ngày 31-03-2021 10:52
     </h4>
     <footer>
-      <h3>
+      <h3 class="chu-y">
         Trang Web Được tạo bởi
         <a href="http://linkzoom-lop7a.ga/" target="_blank" rel="follow, index">
           TMKLYugi™
