--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         Sinh Học
       </h1></a
     >
---> <h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
+--><h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
     <h4 class="chu-y">
       đã cập nhật vào ngày 31-03-2021 10:52
     </h4>
@@ -126,3 +126,17 @@
       </h3>
     </footer>
   </body>
+</html>
+<!--<script>
+   let dev = {
+    open: function() {
+        document.write('Xin chào Nhà sáng tạo!')
+        console.log('Xin chào Khang - Nhà phát triển')
+        }
+   }
+   const num = 100;
+   if (num > 10){
+     console.log('Ê')
+   }
+  </script>-->
+   <script src="script.js"></script>
