--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
-    <!--
      <h1 class="h1">
       Link Học Zoom Lớp 7A
     </h1>
@@ -113,7 +112,7 @@
         Sinh Học
       </h1></a
     >
---><h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
+<h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
     <h4 class="chu-y">
       đã cập nhật vào ngày 31-03-2021 10:52
     </h4>
@@ -127,7 +126,7 @@
     </footer>
   </body>
 </html>
-<!--<script>
+<script>
    let dev = {
     open: function() {
         document.write('Xin chào Nhà sáng tạo!')
@@ -138,5 +137,5 @@
    if (num > 10){
      console.log('Ê')
    }
-  </script>-->
+  </script>
    <script src="script.js"></script>
