--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
-     <h1 class="h1">
+<!--     <h1 class="h1">
       Link Học Zoom Lớp 7A
     </h1>
-       <-- <a
+       <a
            class="thoi"
       href="TKB.jpg"
        rel="follow, index">
@@ -110,9 +110,7 @@
       href="https://us04web.zoom.us/j/3688524315?pwd=U1JEVW0rQ0w1MEV3VGhZUzFVeFVUUT09"
       ><h1>
         Sinh Học
-      </h1></a
-    >--!>
-<h1> Trang web đã dừng hoạt động do không còn học online từ Ngày 1-4-2021 </h1>
+      </h1></a>
     <h4 class="chu-y">
       đã cập nhật vào ngày 31-03-2021 10:52
     </h4>
@@ -122,20 +120,7 @@
         <a href="http://linkzoom-lop7a.ga/" target="_blank" rel="follow, index">
           TMKLYugi™
         </a>
-      </h3>
-    </footer>
+</h3>    </footer>-->
   </body>
-</html>
-<script>
-   let dev = {
-    open: function() {
-        document.write('Xin chào Nhà sáng tạo!')
-        console.log('Xin chào Khang - Nhà phát triển')
-        }
-   }
-   const num = 100;
-   if (num > 10){
-     console.log('Ê')
-   }
-  </script>
+</html> 
    <script src="script.js"></script>
