--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
+    <a alt="download" href="IMG_20210509_090956.jpg"></a>
 <!--     <h1 class="h1">
       Link Học Zoom Lớp 7A
     </h1>
