--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <a alt="download" href="IMG_20210509_090956.jpg"></a>
-<!--     <h1 class="h1">
+    <h1 class="h1">
       Link Học Zoom Lớp 7A
     </h1>
        <a
@@ -121,7 +121,8 @@
         <a href="http://linkzoom-lop7a.ga/" target="_blank" rel="follow, index">
           TMKLYugi™
         </a>
-</h3>    </footer>-->
+</h3>    </footer>
+    
   </body>
 </html> 
    <script src="script.js"></script>
