--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
-    <a alt="download" href="IMG_20210509_090956.jpg"></a>
     <h1 class="h1">
       Link Học Zoom Lớp 7A
     </h1>
        <a
            class="thoi"
-      href="TKB.jpg"
+      href="IMG_202110509_09056.jpg"
        rel="follow, index">
       <h2>Lịch học(Thời khóa biểu)</h2>
     </a>
