--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </h1>
        <a
            class="thoi"
-      href="IMG_20210509_090956.jpg"
+      href="TKB.jpg"
        rel="follow, index">
       <h2>Lịch học(Thời khóa biểu)</h2>
     </a>
