--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
-    <h1 class="h1">
+    <h1 class="title">
       Link Học Zoom Lớp 7A
     </h1>
        <a
