--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link 
     rel="stylesheet" 
     href="style.css" 
@@ -14,7 +15,7 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
-    <h1 class="h1">
+    <h1 class="title">
       Link Học Zoom Lớp 7A
     </h1>
        <a
