--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </h1>
        <a
            class="thoi"
-      href="TKB.jpg"
+      href="TKB_15-5.jpg"
        rel="follow, index">
       <h2>Lịch học(Thời khóa biểu)</h2>
     </a>
