--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
         Sinh Học
       </h1></a>
     <h4 class="chu-y">
-      đã cập nhật vào ngày 11-05-2021 6:43
+      đã cập nhật vào ngày 19-05-2021 20:23
     </h4>
     <footer>
       <h3 class="chu-y">
         Trang Web Được tạo bởi
-        <a href="http://linkzoom-lop7a.ga/" target="_blank" rel="follow, index">
+        <a href="https://github.com/TMKLYugi" target="_blank" rel="follow, index">
           TMKLYugi™
         </a>
 </h3>    </footer>
