--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
-    <h1 class="title">
+    <!--<h1 class="title">
       Link Học Zoom Lớp 7A
     </h1>
        <a
@@ -32,14 +32,14 @@
         Công Nghệ
       </h1></a
     >
-    <!--<a
+    <a
       href=" https://us02web.zoom.us/j/4157958176?pwd=NE16V1BRN2ZQcjNHaUtLaitoUFhMdz09"
       target="_blank"
       rel="follow, index"
       ><h1>
         Toán
       </h1></a
-    >-->
+    >
     <a
       href="https://us05web.zoom.us/j/7953943967?pwd=V0Y3ZFpQWWdHQyt6T1FSb2dmOHNtUT09"
       target="_blank"
@@ -47,7 +47,7 @@
       ><h1>
         Thể Dục
       </h1></a
-    ><!--
+    >
     <a
       href="https://zoom.us/j/2659063486?pwd=OGE3RTREZFh3NjM0WjJvQ1lYUmJ4dz09"
       target="_blank"
@@ -63,13 +63,13 @@
       ><h1>
        Ngữ Văn
       </h1></a
-    >-->
+   >
     <a
       href="https://us05web.zoom.us/j/4086286118?pwd=TEJsRGNKaUxMeVNKZ3BoM1MybjdzUT09"
       ><h1>
         Mĩ Thuật
       </h1></a
-    ><!--
+    >
     <a
       href="https://us04web.zoom.us/j/3728500082?pwd=WkgzRUZLMXhxYXNjVS9WTTEyRDdGZz09"
       ><h1>
@@ -87,14 +87,14 @@
       ><h1>
         GDCD
       </h1></a
-    >-->
+    >
     <a
       href="https://us04web.zoom.us/j/4713246659?pwd=eVlIM0lhOEl1TmhWeGE0cHpUQlIrQT09"
       ><h1>
         Địa Lý
       </h1></a
     >
-   <!-- <a
+   <a
       href="https://us02web.zoom.us/j/2783316670?pwd=TFBMS1ZtNnhOcHQzdDV5UG1oOTNQUT09"
       ><h1>
         Lịch Sử
@@ -106,8 +106,8 @@
         Sinh Học
       </h1></a>-->
     <h4 class="chu-y">
-      đã cập nhật vào ngày 20-05-2021 9:36
-    </h4>
+      đã xoá vào ngày 23-05-2021 9:36
+    </h4><!--
     <footer>
       <h3 class="chu-y">
         Trang Web Được tạo bởi
@@ -115,6 +115,7 @@
           TMKLYugi™
         </a>
 </h3>    </footer>
+  -->
     
   </body>
 </html> 
