--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       ><h1>
         Sinh Học
       </h1></a>-->
-    <BUTTON TYPE="BUTTON" ONCLICK="alert('Tò mò quá nhỉ?!!');dev.open()">ĐỪNG ẤN</BUTTON>
+    <BUTTON TYPE="BUTTON" ONCLICK="alert('Tò mò quá nhỉ?!!')">ĐỪNG ẤN</BUTTON>
     <h4 class="chu-y">
       đã xoá vào ngày 23-05-2021 9:36
     </h4><!--
