--- a/index.html
+++ b/index.html
@@ -15,102 +15,13 @@
     <title>Link học zoom lớp 7A</title>
   </head>
   <body>
-9673541148
-20212022
-    <!--<h1 class="title">
-      Link Học Zoom Lớp 7A
-    </h1>
-       <a
-           class="thoi"
-      href="TKB_15-5.jpg"
-       rel="follow, index">
-      <h2>Lịch học(Thời khóa biểu)</h2>
-    </a>
-    <a
-      href="https://us04web.zoom.us/j/7752377704?pwd=QUw5Qk5aYzVVOGJBd2RoYUUvZ21IQT09"
-      target="_blank"
-      rel="follow, index"
-      ><h1>
-        Công Nghệ
-      </h1></a
-    >
-    <a
-      href=" https://us02web.zoom.us/j/4157958176?pwd=NE16V1BRN2ZQcjNHaUtLaitoUFhMdz09"
-      target="_blank"
-      rel="follow, index"
-      ><h1>
-        Toán
-      </h1></a
-    >
-    <a
-      href="https://us05web.zoom.us/j/7953943967?pwd=V0Y3ZFpQWWdHQyt6T1FSb2dmOHNtUT09"
-      target="_blank"
-      rel="follow, index"
-      ><h1>
-        Thể Dục
-      </h1></a
-    >
-    <a
-      href="https://zoom.us/j/2659063486?pwd=OGE3RTREZFh3NjM0WjJvQ1lYUmJ4dz09"
-      target="_blank"
-      rel="follow, index"
-      ><h1>
-        Tiếng Anh
-      </h1></a
-    >-->
     <a
       href="https://zoom.us/j/9673541148?pwd=cThacnJpTE9ySHdHeGRlVVNRNThOZz09"
       target="_blank"
       rel="follow, index"
       ><h1>
-       Ngữ Văn
-      </h1></a
-   ><!--
-    <a
-      href="https://us05web.zoom.us/j/4086286118?pwd=TEJsRGNKaUxMeVNKZ3BoM1MybjdzUT09"
-      ><h1>
-        Mĩ Thuật
-      </h1></a
-    >
-    <a
-      href="https://us04web.zoom.us/j/3728500082?pwd=WkgzRUZLMXhxYXNjVS9WTTEyRDdGZz09"
-      ><h1>
-        Vật Lý
-      </h1></a
-    >
-    <a
-      href="https://us04web.zoom.us/j/3720044538?pwd=S2NkMGNPSGNmbE9xb1VmR3NpYjNZZz09"
-      ><h1>
-        Âm Nhạc
-      </h1></a
-    >
-    <a
-      href="https://us02web.zoom.us/j/5758202712?pwd=TFVjN1UrMlZScEM4NEM3cGRORmxVZz09"
-      ><h1>
-        GDCD
-      </h1></a
-    >
-    <a
-      href="https://us04web.zoom.us/j/4713246659?pwd=eVlIM0lhOEl1TmhWeGE0cHpUQlIrQT09"
-      ><h1>
-        Địa Lý
-      </h1></a
-    >
-   <a
-      href="https://us02web.zoom.us/j/2783316670?pwd=TFBMS1ZtNnhOcHQzdDV5UG1oOTNQUT09"
-      ><h1>
-        Lịch Sử
-      </h1></a
-    >
-    <a
-      href="https://us04web.zoom.us/j/3688524315?pwd=U1JEVW0rQ0w1MEV3VGhZUzFVeFVUUT09"
-      ><h1>
-        Sinh Học
+       Phòng học 8A
       </h1></a>
-    <BUTTON TYPE="BUTTON" ONCLICK="alert('Tò mò quá nhỉ?!!')">ĐỪNG ẤN</BUTTON>
-    <h4 class="chu-y">
-      đã xoá vào ngày 23-05-2021 9:36
-    </h4>
     <footer>
       <h3 class="chu-y">
         Trang Web Được tạo bởi
