--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       ><h1>
        Phòng học 8A
       </h1></a>
-    <h2>Hoặc vào link <a href="lop8a-thcshaitan.tk">này<\a></h2>
+    <h2>Hoặc vào link lop8A-thcsHaiTan.tk</h2>
   </body>
 </html> 
    <script src="script.js"></script>
