--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h3>Hoặc vào link <br>lop8A-thcsHaiTan.tk</h3>
 <h2>TKB</h2>  
          <IMG SRC="TKB.jpg" ID="TKB">
-           <BUTTON ID="SHOWIMAGE"></BUTTON>                         
+           <BUTTON ID="SHOWIMAGE">Xem TKB (Sang)</BUTTON>                         
   </body>
 </html> 
    <script src="script.js"></script>
